# huemid

./: .gitignore  LICENSE  config.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py  logcfg.py  scrapper.py  sender.py
